# xmonad-config

./: .gitignore  .hlint.yaml  README.md  aloysius.cabal  build  default.nix  install.sh  package.yaml  restart  restart.sh  result  shell.nix  xmonad-config.cabal  xmonad-config.nix
.ccls-cache/@home@brett@src@github.com@brettm12345@xmonad-config/: dist-newstyle@build@x86_64-linux@ghc-8.8.2@xmonad-config-1.0.0.2@x@xmonad-config@build@xmonad-config@autogen@cabal_macros.h  dist-newstyle@build@x86_64-linux@ghc-8.8.2@xmonad-config-1.0.0.2@x@xmonad-config@build@xmonad-config@autogen@cabal_macros.h.blob  dist-newstyle@build@x86_64-linux@ghc-8.8.3@xmonad-config-1.0.0.2@x@xmonad-config@build@xmonad-config@autogen@cabal_macros.h  dist-newstyle@build@x86_64-linux@ghc-8.8.3@xmonad-config-1.0.0.2@x@xmonad-config@build@xmonad-config@autogen@cabal_macros.h.blob
doc/: todo.org
lib/: xmonad.hs  xmonad.tags
lib/App/: Alias.hs  Alias.tags  Launcher.hs  Scratchpad.hs  Scratchpad.tags
lib/Bind/: Keys.hs  Keys.tags  Master.hs  Mouse.hs  Mouse.tags  Show.hs  Show.tags  Util.hs
lib/Bind/Keymaps/: Internal.hs  Internal.tags  Launchers.hs  Launchers.tags  Layout.hs  Layout.tags  Resize.hs  Resize.tags  Session.hs  Session.tags  Windows.hs  Windows.tags  Workspaces.hs  Workspaces.tags
lib/Bind/Keys/: Internal.hs  Launchers.hs  Layout.hs  Resize.hs  Session.hs  Windows.hs  Workspaces.hs
lib/Bus/: Events.hs  Hooks.hs  Hooks.tags  Queries.hs  Queries.tags
lib/Config/: Options.hs  Projects.hs  Projects.tags
lib/Container/: Layout.hs  Layout.tags  Navigation.hs
lib/Theme/: ChosenTheme.hs  Colors.hs  Gaps.hs  Gaps.tags  Nord.hs  Sizes.hs  Sizes.tags  Types.hs
lib/Theme/Colors/: Dracula.hs  Ephemeral.hs
nix/: default.nix  sources.json
