cabal-version:         >=2.0

name:                  xmonad-config
version:               1.0.0.2
synopsis:              xmonad config
homepage:              https://gitlab.com/brettm12345/xmonad-config
license:               MIT
license-file:          LICENSE
author:                brettm12345
maintainer:            brettmandler@gmail.com
extra-source-files:    CHANGELOG.md

custom-setup
  setup-depends: Cabal, base

executable xmonad
  main-is:             xmonad.hs
  default-extensions:  OverloadedStrings
  other-modules:       App.Alias
                     , App.Launcher
                     , App.Scratchpad
                     , Bind.Keys
                     , Bind.Show
                     , Bind.Keys.Internal
                     , Bind.Keys.Launchers
                     , Bind.Keys.Layout
                     , Bind.Keys.Resize
                     , Bind.Keys.Session
                     , Bind.Keys.Windows
                     , Bind.Keys.Workspaces
                     , Bind.Mouse
                     , Bus.Hooks
                     , Bus.Queries
                     , Config.Options
                     , Config.Projects
                     , Container.Layout
                     , Data.Commands
                     , Theme.ChosenTheme
                     , Theme.Colors.Ephemeral
                     , Theme.Colors.Dracula
                     , Theme.Gaps
                     , Theme.Sizes
                     , Theme.Types
                     , Theme.Nord
  build-depends:       Cabal >= 1.22
                     , X11
                     , gtk3
                     , directory
                     , filepath
                     , base
                     , containers
                     , taffybar
                     , xmonad
                     , xmonad-contrib
                     , xmonad-extras
                     , text
                     , yaml
  hs-source-dirs:      lib
  default-language:    Haskell2010
